# apex-ledger

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  GITLAB_SETUP.md  README.md  SECURITY.md  SETUP.md  SITREP.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.cursor/skills/apex-council-synthesis/: SKILL.md
.cursor/skills/apex-dast-check/: SKILL.md
.cursor/skills/apex-deps-audit/: SKILL.md
.cursor/skills/apex-ledger-read/: SKILL.md
.cursor/skills/apex-quant-forecast/: SKILL.md
.cursor/skills/apex-reconciliation/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: ci.yml  pages.yml  security.yml
docker/: Dockerfile.apex  Dockerfile.kronos  Dockerfile.mirofish  apex-entrypoint.sh  mirofish-entrypoint.sh
docs/: index.html  styles.css
examples/: holdings.example.csv  schwab-positions.example.csv
fixtures/kronos/: AAPL.json  BND.json  VTI.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: bootstrap_personal_investor_simulation.py  configure_keys.py  configure_plaid.py  curate_skillmd.py  import_personal_ledger.py  run_kronos_api.py  seed_personal_investor_simulation.py  setup_mirofish.py  setup_plaid_production.sh
services/kronos_api/: app.py  requirements.txt
skills/: manifest.json
src/apex_ledger/: __init__.py  cli.py  config.py
tests/: test_challenge.py  test_council.py  test_integrations.py  test_ledger_api.py  test_mirofish_integration.py  test_presentation.py  test_recommendations.py  test_topics.py
(+53 files in other folders)
